src/app/component/confirm_dialog/snapshots/jedit__app__component__confirm_dialog__error_confirm_dialog__test__render_title_test.snap
---
source: src/app/component/confirm_dialog/error_confirm_dialog.rs
expression: "render_to_string(&ErrorConfirmDialog::new(\"short error!\".into()).title(Line::from(\"Short title\")))"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                            ┌─────Short title──────┐                            "
"                            │                      │                            "
"                            │ short error!         │                            "
"                            │                      │                            "
"                            └────Press any key─────┘                            "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
